Fix Overflow

--- a/assets/css/querymid.css
+++ b/assets/css/querymid.css
@@ -45,7 +45,6 @@
 	}
 
 	.playlist{
-		overflow: scroll;
 		margin: 10px auto 0 15px;
 		flex-shrink: 1;
 	}
